--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <small> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam recusandae sunt perferendis laudantium. Id voluptates neque fugit quod, autem mollitia illo, at natus ipsam illum quisquam sunt accusantium quaerat maxime qui assumenda laboriosam pariatur et? Repellendus quia a delectus. Dolor, quia quo! Et, eveniet esse dolore amet quas officiis? Expedita veritatis quae alias mollitia quaerat sint quis cupiditate explicabo nisi! </small>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis dolore ad pariatur commodi libero error modi iste, aperiam unde inventore, beatae dolores vitae natus praesentium, eaque debitis obcaecati nam? Est autem et dolore fugiat dignissimos illum exercitationem ipsa iure delectus itaque harum assumenda deserunt dicta ratione dolores ea, sequi sed.</p>
 <h1>New work</h1>
+<p>Doing mrore</p>
+<h1>Adding further</h1>
 </body>
 </html>
