--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis dolore ad pariatur commodi libero error modi iste, aperiam unde inventore, beatae dolores vitae natus praesentium, eaque debitis obcaecati nam? Est autem et dolore fugiat dignissimos illum exercitationem ipsa iure delectus itaque harum assumenda deserunt dicta ratione dolores ea, sequi sed.</p>
 <h1>New work</h1>
 <p>Doing mrore</p>
-<h1>Adding further</h1>
+<h3>Adding further</h3>
+<img src="/images (1).jpg" alt="">
 </body>
 </html>
