--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 <h1>New work</h1>
 <p>Doing mrore</p>
 <h3>Adding further</h3>
-<img src="/images (1).jpg" alt="">
+<img src="images (1).jpg" alt="">
 </body>
 </html>
